--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
+    "react-router": "2.6.1",
     "redux": "^3.6.0",
     "redux-devtools": "^3.4.0",
     "redux-logger": "^3.0.6",
